[gd_scene load_steps=5 format=3 uid="uid://daqjwlmnrmhxr"]

[ext_resource type="Script" uid="uid://c6dl8exr0hm8k" path="res://src/main.gd" id="1_eewff"]
[ext_resource type="PackedScene" uid="uid://ckajtcj4403sy" path="res://src/hub/hub.tscn" id="2_3cfgd"]
[ext_resource type="PackedScene" uid="uid://cl5f5vup72n32" path="res://src/game_manager.tscn" id="3_fyndt"]
[ext_resource type="PackedScene" uid="uid://bj37bql2rx1om" path="res://src/title_screen.tscn" id="4_kmhfv"]

[node name="Main" type="Node"]
script = ExtResource("1_eewff")
hub_scene = ExtResource("2_3cfgd")
game_scene = ExtResource("3_fyndt")
title_scene = ExtResource("4_kmhfv")

[node name="WorldLayer" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="Fader" type="ColorRect" parent="TransitionLayer"]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true
